syntax = "proto3";

package sample;

// timeStampはimportすれば使えるようになる
import "google/protobuf/timestamp.proto";

// 自前の型を入れ子にして利用可能
// 配列を使いたい場合repeatedとする
message Sample {
    int32 id = 1;
    string name = 2;
    SampleType type = 3;
    ChildSample child = 4;
    google.protobuf.Timestamp updatedAt = 5;
    repeated string tags = 6;
}

// enumも定義可能
enum SampleType {
    NORMAL = 0;
    SPECIAL = 1;
}

message ChildSample {
    string id = 1;
    string childName = 2;
}


// メソッド群を定義
service SampleService {
    rpc GetSample (GetSampleRequest) returns (Sample) {}
    rpc GetStreamingSample (GetSampleRequest) returns (stream StreamResult) {}
}

    // リクエストにも型が必要
    message GetSampleRequest {
        string id = 1;
    }

    message StreamResult {
        int32 value = 1;
    }

